[package]
name = "tornearia_back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "*"
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
uuid = { version = "*",features = ["v4"]}
diesel = { version = "*", features = ["postgres", "r2d2", "serde_json"] }
serde_json = "*"
dotenv = "*"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.